Ajout classe Gtsp
-Ajout de la classe Gtsp qui sert à charger un fichier GTSP écrit dans le format TSPLIB
-Changement des variables de distance, de chemin parcouru et de meilleur chemin de Integer vers Float